--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌦️</text></svg>"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Weather Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div> <!-- React mounts here -->
+    <div id="root"></div>
   </body>
 </html>
